manage users only if is admin
token ttl 12h
update cabbage version
